Changelog
---------


6.3.2017

+ Created changelog
+ Added Devise to Gemfile
+ Added Ruby 2.3.1 to Gemfile
+ Added Creator model/routes